Change connection string.

--- a/BookStore.API/appsettings.json
+++ b/BookStore.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "BookStoreConnectionString": "Server=localhost\\SQLEXPRESS;Database=BookStore;User Id=sa;Password=mcn45@DBA"
+    "BookStoreConnectionString": "Server=localhost\\SQLEXPRESS;Database=BookStore;User Id=xxxxxx;Password=xxxxxxxxxxxxxxx"
   },
   "Logging": {
     "LogLevel": {
